--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 
 # Reference crystals (from other sources, may be added later?)
 reference_crystal
+PotentialProperties
+calculation_E_vs_r_scan
+calculation_diatom_scan
+calculation_isolated_atom
