--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ PotentialProperties
 calculation_E_vs_r_scan
 calculation_diatom_scan
 calculation_isolated_atom
+
+# Too large parameter files - users should unzip the .zip versions for themselves
+potential_LAMMPS/2022--Erhard-L-C--Si-O--LAMMPS--ipr1/silica_gap.xml.sparseX.GAP_2021_4_19_120_7_32_55_3364
+potential_LAMMPS/2022--Erhard-L-C--Si-O--LAMMPS--ipr1/silica_gap.xml.sparseX.GAP_2021_4_19_120_7_32_55_3365
