remove tracking of large cache files for reference/relaxed crystals

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,21 @@
 
 # Reference crystals (from other sources, may be added later?)
 reference_crystal
+
+# Calculation results 
 PotentialProperties
+PotentialProperties.csv
 calculation_E_vs_r_scan
+calculation_E_vs_r_scan.csv
 calculation_diatom_scan
+calculation_diatom_scan.csv
 calculation_isolated_atom
+calculation_isolated_atom.csv
+
+# Large csv cache files
+relaxed_crystal.csv
+reference_crystal.csv
+
 
 # Too large parameter files - users should unzip the .zip versions for themselves
 potential_LAMMPS/2022--Erhard-L-C--Si-O--LAMMPS--ipr1/silica_gap.xml.sparseX.GAP_2021_4_19_120_7_32_55_3364
